Feature-15 WIP-3 Use "sketches" as the schema name, populate with the correct column names.